# OasisWaker

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITIQUE.md  DESIGN_PHILOSOPHY.md  DOCUMENTATION.md  LEGACY.md  MIGRATION_PLAN.md  NEW_ARCHITECTURE.md  PLAN.md  PROJECT_RUNNABILITY.md  PROJECT_STATUS.md  README.md  VISION.md  dev.bat  oasiswaker.md  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
backend/: .gitignore  0.27.0  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f2198937175_initial_schema.py  86940e5e2ef3_add_node_user_project_fk.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/auth/: __init__.py  api_key.py  dependencies.py  jwt.py  oauth.py  password.py
backend/app/core/: __init__.py  quota.py  rate_limit.py  scoping.py
backend/app/models/: __init__.py  api_key.py  block.py  connection.py  node.py  project.py  user.py
backend/app/routes/: __init__.py  auth.py  blocks.py  health.py  nodes.py  ws.py
backend/app/schemas/: __init__.py  auth.py  block.py  connection.py  node.py
backend/app/services/: __init__.py  auth_service.py  block_service.py  node_service.py
docs/: index.html
frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
src/: index.ts
src/auth/: base.ts  cloudflare.ts  supabase.ts  vercel.ts
src/cli/: index.ts
src/config/: env.ts
src/crypto/: encryption.test.ts  encryption.ts
src/deploy/: cloudflare.ts  supabase.ts
src/errors/: index.test.ts  index.ts
src/services/: webhook-handler.test.ts  webhook-handler.ts
src/utils/: index.ts  (+2 more)
(+66 files in other folders)
