[project]
name = "oasiswaker-backend"
version = "2.0.0"
description = "OasisWaker v2.0 — Central coordination server for decentralized edge storage network"
requires-python = ">=3.10"
authors = [
    { name = "OasisBio", email = "support@oasisbio.com" },
]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
oasiswaker-backend = "app.main:main"

[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"